@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-03T08:17:22Z",
-  "count_outdated" : 800,
-  "uniques_outdated" : 465,
-  "count" : 833,
+  "timestamp" : "2023-09-03T16:17:59Z",
+  "count_outdated" : 807,
+  "uniques_outdated" : 469,
+  "count" : 834,
   "uniques" : 489,
   "clones" : [
-    {
-      "timestamp": "2023-08-20T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 1, 7 ],
-      "count_decinc": [ 1, 7 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 1, 4 ]
-    },
     {
       "timestamp": "2023-08-21T00:00:00Z",
       "count": 3,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
