@@ -1,12 +1,7 @@
 {
-  "count": 32,
-  "uniques": 11,
+  "count": 27,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2023-08-20T00:00:00Z",
-      "count": 6,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-08-21T00:00:00Z",
       "count": 3,
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
